[package]
name = "relua"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing.workspace = true
lalrpop-util = { version = "0.20", features = ["lexer", "unicode"] }

[build-dependencies]
lalrpop = "0.20"
