[package]
name = "relua-repl"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-subscriber = "0.3"
relua = { path = "../relua" }
rustyline = { version = "12.0.0", features = ["with-file-history"] }
anyhow = "1.0.75"
